# nfty

./: .gitignore  Cargo.toml  README.md  build.rs
nfty-derive/: Cargo.toml
nfty-derive/src/: lib.rs
src/: cli.rs  logging.rs  main.rs  project.rs
src/api/project/: hooks.rs  mod.rs  test.rs
src/api/project/lib/: branch-clean.sh  generic-hook.sh
src/api/project/lib/git-lfs/: pre-push.sh
src/cli/: mod.rs  project.rs
src/cli/bring/: mod.rs
src/cli/data/: mod.rs
src/cli/data/project/: bring.rs  engage.rs  mod.rs
src/cli/engage/: mod.rs
src/cli/project/: bring.rs  conform.rs  engage.rs  license.rs  mod.rs
src/cli/project/conform/: ansible.rs  vagrant.rs
src/project/: hooks.rs  templates.rs
src/project/lib/git-lfs/: post-checkout.sh  post-commit.sh  post-merge.sh
src/project/parse/: ansible.rs
src/project/parse/ansible/: tests.rs
src/project/templates/: ansible.rs  git.rs  license.rs  python.rs  vagrant.rs
src/project/templates/vagrant/: tests.rs
src/project/templates/vagrant/fixtures/playbooks/: go.yml  hybrid.yml  java.yml  node.yml  python.yml  ruby.yml  rust.yml
src/util/: mod.rs
templates/ansible/: Makefile.j2  ansible.cfg.j2  docker-compose.yml.j2  galaxy-requirements.yml.j2
templates/ansible/tests/: Makefile.j2  gitignore.j2
templates/ansible/tests/inventory/: hosts.yml.j2
templates/git/: gitignore.j2
templates/licenses/: APACHE.j2  MIT.j2  PRIVATE.j2
templates/python/: requirements.txt.j2
templates/vagrant/: playbook.yml.j2
