[package]
name = "nfty"
version = "0.1.0"
authors = ["Naftuli Kay <me@naftuli.wtf>"]

[dependencies]
chrono = "0.4.2"
dirs = "1.0.4"
git2 = "0.7.1"
lazy_static = "1.0.0"
log = "0.4.1"
log4rs = "0.8.0"
log4rs-syslog = "3.0.1"
parking_lot = "0.5.4"
pbr = "1.0.0"
rayon = "1.0.1"
regex = "0.2.10"
structopt = "0.2.6"
