[package]
name = "nfty"
version = "0.3.1"
authors = ["Naftuli Kay <me@naftuli.wtf>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
askama = "0.7.2"

[dependencies]
askama = "0.7.2"
chrono = "0.4.2"
dirs = "1.0.4"
git2 = "0.7.1"
lazy_static = "1.2.0"
log = "0.4.6"
log4rs = "0.8.0"
log4rs-syslog = "3.0.1"
nfty-derive = { path = "nfty-derive", version = "0.1.0" }
parking_lot = "0.5.4"
pbr = "1.0.0"
rayon = "1.0.1"
regex = "0.2.10"
rustfix = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
structopt = "0.2.6"

[workspace]
